error.log
FAILED: //packages/apps/GameSpace/app/src/main:GameSpace kotlinc [common] (priority: 110011)
Outputs: out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/kotlin/GameSpace.jar out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/kotlin_headers/GameSpace.jar
Error: exited with code: 1
Command: rm -rf "out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/kotlinc/classes" "out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/kotlinc/header_classes" "out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/kotlinc/srcJars" "out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/kotlinc-build.xml" "out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/kotlinc/empty" && mkdir -p "out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/kotlinc/classes" "out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/kotlinc/header_classes" "out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/kotlinc/srcJars" "out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/kotlinc/empty" && out/host/linux-x86/bin/zipsync -d out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/kotlinc/srcJars -l out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/kotlinc/srcJars/list -f "*.java" -f "*.kt" out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/gen/aidl/aidl0.srcjar out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/gen/android/R.srcjar out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/kapt/kapt-sources.jar && out/host/linux-x86/bin/gen-kotlin-build-file --classpath "out/soong/.intermediates/build/soong/java/core-libraries/stable.core.platform.api.stubs/android_common/turbine-combined/stable.core.platform.api.stubs.jar:out/soong/.intermediates/libcore/core-lambda-stubs/android_common/turbine-combined/core-lambda-stubs.jar:out/soong/.intermediates/frameworks/base/ext/android_common/turbine-combined/ext.jar:out/soong/.intermediates/frameworks/base/framework/android_common/e18b8e8d84cb9f664aa09a397b08c165/turbine-combined/framework.jar:out/soong/.intermediates/frameworks/base/framework/android_common/e18b8e8d84cb9f664aa09a397b08c165/repackaged-turbine-jarjar/framework.jar:out/soong/.intermediates/frameworks/base/packages/SettingsLib/SettingsLib/android_common/e18b8e8d84cb9f664aa09a397b08c165/turbine-combined/SettingsLib.jar:out/soong/.intermediates/prebuilts/sdk/current/androidx/m2repository/androidx/core/core-ktx/1.13.0-beta01/androidx.core_core-ktx/android_common/turbine-combined/androidx.core_core-ktx.jar:out/soong/.intermediates/prebuilts/sdk/current/androidx/m2repository/androidx/appcompat/appcompat/1.7.0-alpha04/androidx.appcompat_appcompat/android_common/turbine-combined/androidx.appcompat_appcompat.jar:out/soong/.intermediates/prebuilts/sdk/current/androidx/m2repository/androidx/preference/preference/1.3.0-alpha01/androidx.preference_preference/android_common/e18b8e8d84cb9f664aa09a397b08c165/turbine-combined/androidx.preference_preference.jar:out/soong/.intermediates/prebuilts/sdk/current/extras/material-design-x/com.google.android.material_material/android_common/turbine-combined/com.google.android.material_material.jar:out/soong/.intermediates/external/kotlinc/kotlin-stdlib/android_common/combined/kotlin-stdlib.jar:out/soong/.intermediates/external/kotlinx.coroutines/kotlinx-coroutines-android/android_common/turbine-combined/kotlinx-coroutines-android.jar:out/soong/.intermediates/prebuilts/tools/common/m2/gson-prebuilt-jar-2.9.1/android_common/combined/gson-prebuilt-jar-2.9.1.jar:out/soong/.intermediates/external/dagger2/hilt_android/android_common/turbine-combined/hilt_android.jar:out/soong/.intermediates/lineage-sdk/org.lineageos.platform.internal/android_common/e18b8e8d84cb9f664aa09a397b08c165/turbine-combined/org.lineageos.platform.internal.jar:out/soong/.intermediates/lineage-sdk/packages/LineagePreferenceLib/LineagePreferenceLib/android_common/e111e2efde5fb74553a7f1d5cc4e5506/turbine-combined/LineagePreferenceLib.jar:out/soong/.intermediates/external/kotlinc/kotlin-stdlib/android_common/combined/kotlin-stdlib.jar:out/soong/.intermediates/external/kotlinc/kotlin-stdlib-jdk7/android_common/combined/kotlin-stdlib-jdk7.jar:out/soong/.intermediates/external/kotlinc/kotlin-stdlib-jdk8/android_common/combined/kotlin-stdlib-jdk8.jar:out/soong/.intermediates/external/kotlinc/kotlin-annotations/android_common/combined/kotlin-annotations.jar" --name "packages__apps__GameSpace__app__src__main__android_common__GameSpace" --out_dir "out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/kotlinc/classes" --srcs "out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/kotlin/GameSpace.jar.rsp" --srcs "out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/kotlinc/srcJars/list"  --out "out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/kotlinc-build.xml" && external/kotlinc/bin/kotlinc   -J--add-opens=java.base/java.util=ALL-UNNAMED -J-Xmx4096M  -opt-in=kotlin.Experimental -opt-in=kotlin.ExperimentalStdlibApi -Xsam-conversions=class -no-stdlib -no-jdk -jvm-target 17 -Xbuild-file=out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/kotlinc-build.xml  -kotlin-home out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/kotlinc/empty  -Xplugin=external/kotlinc/lib/jvm-abi-gen.jar  -P plugin:org.jetbrains.kotlin.jvm.abi:outputDir=out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/kotlinc/header_classes && out/host/linux-x86/bin/soong_zip -jar -o out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/kotlin/GameSpace.jar -C out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/kotlinc/classes -D out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/kotlinc/classes -write_if_changed && out/host/linux-x86/bin/soong_zip -jar -o out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/kotlin_headers/GameSpace.jar -C out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/kotlinc/header_classes -D out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/kotlinc/header_classes -write_if_changed && rm -rf "out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/kotlinc/srcJars" "out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/kotlinc/classes" "out/soong/.intermediates/packages/apps/GameSpace/app/src/main/GameSpace/android_common/e111e2efde5fb74553a7f1d5cc4e5506/kotlinc/header_classes"
Output:
packages/apps/GameSpace/app/src/main/java/io/chaldeaprjkt/gamespace/data/SystemSettings.kt:65:46: error: unresolved reference: KEY_THREE_FINGERS_SWIPE_ACTION
            resolver, LineageSettings.System.KEY_THREE_FINGERS_SWIPE_ACTION, 0,
                                             ^
packages/apps/GameSpace/app/src/main/java/io/chaldeaprjkt/gamespace/data/SystemSettings.kt:70:50: error: unresolved reference: KEY_THREE_FINGERS_SWIPE_ACTION
                resolver, LineageSettings.System.KEY_THREE_FINGERS_SWIPE_ACTION,
                                                 ^

